[BUGFIX] Fixes vertical scrollbars on .container

--- a/app/assets/stylesheets/partials/_components.scss
+++ b/app/assets/stylesheets/partials/_components.scss
@@ -9,7 +9,7 @@
   background-color: $beige;
 	margin: 0 auto;
   // TODO this cuts off help overlays that extend beyond .container; reposition help overlays
-  overflow-x: hidden;
+  overflow: hidden;
   .authentication & {
     @include box-shadow(none);
     background-color: transparent;
